ADD: angular.js

--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -11,7 +11,10 @@
 
 <div id="placeholder"></div>
 
-<script type="text/javascript" src="./js/zepto.min.js"></script>
+<script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
+<script src="./lib/angular.min.js"></script>
+<script src="./lib/zepto.min.js"></script>
+<script src="./js/eat.js"></script>
 <script type="text/javascript">
 
   function getRandomColor() {
@@ -57,10 +60,6 @@
         height : oHeight / 1.2
       });
   });
-
-
-
-
 </script>
 </body>
 </html>
