--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -1,65 +1,25 @@
 <!doctype html>
-<html lang="en" >
+<html ng-app="EatTogether">
 <head>
   <meta charset="utf-8">
-  <title>球球</title>
+  <title>EatTogether</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="./css/balls.css">
+  <link rel="stylesheet" type="text/css" href="./css/eat.css">
 </head>
-<body>
+<body ng-controller="TuanListCtrl">
 
-
-<div id="placeholder"></div>
+<div>
+  <div ng-repeat="data in list" class="ball"
+       ng-style={{data.div1}}>
+    <div ng-style={{data.div2}}>
+      {{data.name}}
+    </div>
+  </div>
+</div>
 
 <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
 <script src="./lib/angular.min.js"></script>
 <script src="./lib/zepto.min.js"></script>
 <script src="./js/eat.js"></script>
-<script type="text/javascript">
-
-  function getRandomColor() {
-    var letters = '0123456789ABCDEF'.split('');
-    var color = '#';
-    for (var i = 0; i < 6; i++ ) {
-        color += letters[Math.floor(Math.random() * 16)];
-    }
-    return color;
-  }
-
-  /** 生成大小在50-150之间的颜色不同的球 */
-  var len = 10;
-  for (var i = 1; i <= len;  i++) {
-    var x = Math.floor(Math.random() * (150 - 50 + 1)) + 50;
-    var $el = $('<div><div></div></div>');
-    $el.addClass('ball');
-    $el.css({
-      height: x * 1.4,
-      width: x * 1.4
-    });
-    $el.find('div').css({
-      height: x,
-      width: x,
-      background: getRandomColor()
-    });
-    $el.appendTo($('#placeholder'));
-  }
-
-
-  $('.ball div').mouseover(function(e){
-    var oWidth = $(this).width();
-    var oHeight = $(this).height();
-    $(this).css({
-        width: oWidth * 1.2,
-        height : oHeight * 1.2
-      });
-  }).mouseout(function (e) {
-    var oWidth = $(this).width();
-    var oHeight = $(this).height();
-    $(this).css({
-        width: oWidth / 1.2,
-        height : oHeight / 1.2
-      });
-  });
-</script>
 </body>
 </html>
