--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>EatTogether</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
-  <link rel="stylesheet" type="text/css" href="./css/eat.css">
+  <link rel="stylesheet" type="text/css" href="./css/base.css">
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/angular-route.min.js"></script>
