--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -1,5 +1,6 @@
 body {
     background-color: #636465;
+    margin:0;
 }
 
 .tuan{
@@ -23,4 +24,57 @@ body {
 
 label{
   display: block;
+}
+
+/** 入团 */
+.s-join{
+    .nav{
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        background-color: #636465;
+        position: relative;
+        a{
+            display: inline-block;
+            font-size: 30px;
+            color: #fff;
+            text-decoration: none;
+            position: absolute;
+            left:10px;
+        }
+        h1{
+          margin: 0;
+          font-size: 20px;
+          font-weight: normal;
+          text-align: center;
+          color: #FF8040;
+        }
+    }
+    section{
+        width: 80%;
+        margin: 1em auto;
+        text-align: center;
+    }
+    input{
+        width: 250px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 15px;
+        border-radius: 4px;
+        padding: 0 1em;
+        box-sizing: border-box;
+        text-align: center;
+    }
+    .btn{
+        display: block;
+        width: 100px;
+        text-align: center;
+        height: 40px;
+        line-height: 40px;
+        margin: 0 auto;
+        background-color: #FF8040;
+        border-radius: 4px;
+        color: #fff;
+        text-decoration: none;
+    }
 }
