--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -14,6 +14,9 @@ body {
   text-shadow: 0 0 3px #000000;
   margin: 0 auto;
   transition: width 1s, height 1s, background 1s;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .tuan a{
@@ -26,30 +29,70 @@ label{
   display: block;
 }
 
-/** 入团 */
-.s-join{
-    .nav{
-        width: 100%;
-        height: 40px;
-        line-height: 40px;
-        background-color: #636465;
-        position: relative;
-        a{
+/** components */
+.btn{
+      display: block;
+      width: 100px;
+      text-align: center;
+      height: 40px;
+      line-height: 40px;
+      margin: 0 auto;
+      background-color: #FF8040;
+      border-radius: 4px;
+      color: #fff;
+      text-decoration: none;
+}
+.nav{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background-color: #636465;
+    position: relative;
+    .return{
+        display: inline-block;
+        font-size: 30px;
+        color: #fff;
+        text-decoration: none;
+        position: absolute;
+        left:10px;
+    }
+    h1{
+      margin: 0;
+      font-size: 20px;
+      font-weight: normal;
+      text-align: center;
+      color: #FF8040;
+    }
+    ul{
+        margin: 0;
+        padding: 0 0 0 40px;
+        li{
+            text-align: center;
             display: inline-block;
-            font-size: 30px;
-            color: #fff;
-            text-decoration: none;
-            position: absolute;
-            left:10px;
-        }
-        h1{
-          margin: 0;
-          font-size: 20px;
-          font-weight: normal;
-          text-align: center;
-          color: #FF8040;
+            width:30%;
+            border:1px solid #fff;
+            margin-left: -4px;
+            font-size: 1em;
+            height: 1.5em;
+            line-height: 1.5em;
+            a{
+                text-decoration: none;
+                color: #fff;
+                width:100%;
+            }
         }
     }
+}
+/** 创团 */
+.s-create{
+  label{
+      display: block;
+  }
+}
+
+/** 入团 */
+.s-join{
+
     section{
         width: 80%;
         margin: 1em auto;
