--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -11,10 +11,30 @@
   <script src="./lib/angular-route.min.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
+  <script src="./js/qrcode.min.js"></script>
 </head>
 <body>
 
 <div ng-view></div>
 
+<!-- 微信sdk -->
+
+<script charset="utf-8" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script charset="utf-8" src="http://zhushou.corp.youdao.com/api/wxauth"></script>
+<script type="text/javascript">
+wx.config({
+  debug: true,
+  appId: _wx_auth.appId,
+  timestamp: _wx_auth.timestamp,
+  nonceStr: _wx_auth.nonceStr,
+  signature: _wx_auth.signature,
+  jsApiList: [
+    'checkJsApi',
+    'scanQRCode'
+  ]
+});
+wx.ready(function (res) {
+  alert(res);
+});
 </body>
 </html>
