--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: #636465;
     margin:0;
@@ -48,6 +50,7 @@ label{
     line-height: 40px;
     background-color: #636465;
     position: relative;
+    text-align: center;
     .return{
         display: inline-block;
         font-size: 30px;
@@ -72,7 +75,7 @@ label{
             width:30%;
             border:1px solid #fff;
             margin-left: -4px;
-            font-size: 1em;
+            font-size: 16px;
             height: 1.5em;
             line-height: 1.5em;
             a{
