--- a/public/scss/tuan.scss
+++ b/public/scss/tuan.scss
@@ -1,3 +1,5 @@
+$width:270px;
+
 .s-create{
     text-align: center;
 
@@ -5,7 +7,38 @@
         display: inline-block;
         margin: 10px auto;
         text-align:center;
-        width:80%;
+        width:$width;
+        background:#f0f0f0;
+        border-radius: 10px;
+        line-height: 2;
+        font-size: 1em;
+        input{
+            border:none;
+            background: #f0f0f0;
+        }
+        textarea{
+            border:none;
+            background: #f0f0f0;
+            resize: none;
+            font-size: 1em;
+            line-height: 2;
+            width:$width;
+            max-height: 200px;
+        }
+    }
+
+}
+
+.s-index{
+
+
+    text-align: center;
+
+    label {
+        display: inline-block;
+        margin: 10px auto;
+        text-align:center;
+        width:$width;
         background:#f0f0f0;
         border-radius: 10px;
         line-height: 2;
@@ -25,34 +58,10 @@
         }
     }
 
-}
-
-.s-index{
-
-
-    text-align: center;
-
-    label {
+    .qrcode{
+        width:200px;
+        height:200px;
         display: inline-block;
-        margin: 10px auto;
-        text-align:center;
-        width:80%;
-        background:#f0f0f0;
-        border-radius: 10px;
-        line-height: 2;
-        font-size: 1em;
-        input{
-            border:none;
-            background: #f0f0f0;
-        }
-        textarea{
-            border:none;
-            background: #f0f0f0;
-            resize: none;
-            font-size: 1em;
-            line-height: 2;
-            width:80%;
-            max-height: 200px;
-        }
+        border:2px solid #d7d7d7;
     }
 }
