--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -11,6 +11,7 @@
   <script src="./lib/angular-route.min.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
+  <script src="./js/service.js"></script>
   <script src="./js/qrcode.min.js"></script>
 </head>
 <body>
