--- a/public/scss/tuan.scss
+++ b/public/scss/tuan.scss
@@ -65,3 +65,11 @@ $width:270px;
         border:2px solid #d7d7d7;
     }
 }
+.s-history{
+    .history{
+        li{
+            margin: 10px auto;
+            font-size: 16px;
+        }
+    }
+}
