--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -132,3 +132,31 @@ label{
         text-decoration: none;
     }
 }
+
+.s-members{
+    text-align: justify;
+    .member{
+        display: inline-block;
+        margin: 0 10px;
+        width: 80px;
+        height: 80px;
+        background-size: 100%;
+        border-radius: 40px;
+        position: relative;
+        overflow: hidden;
+        img{
+          max-width: 100%;
+        }
+        p{
+          position: absolute;
+          bottom: 5px;
+          left: 10px;
+          width: 100%;
+          text-align: center;
+          height: 20px;
+          line-height: 20px;
+          transform: rotate(-22deg);
+          font-size: 14px;
+        }
+    }
+}
