--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,8 +2,9 @@
 body {
   background-color: #636465;
   margin: 0; }
-  body p {
-    margin: 0; }
+  body p, body ul, body li {
+    margin: 0;
+    padding: 0; }
 
 .tuan {
   float: left; }
@@ -41,42 +42,43 @@ label {
   color: #fff;
   text-decoration: none; }
 
-.nav {
+.nav .return {
+  display: inline-block;
+  font-size: 30px;
+  color: #fff;
+  text-decoration: none;
+  position: absolute;
+  left: 10px; }
+.nav h1 {
+  margin: 0;
+  background: #FF8040;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: normal;
+  text-align: center;
+  color: #fff; }
+.nav ul {
   width: 100%;
   height: 40px;
   line-height: 40px;
   background-color: #636465;
-  position: relative;
+  position: fixed;
+  bottom: 0;
   text-align: center; }
-  .nav .return {
-    display: inline-block;
-    font-size: 30px;
-    color: #fff;
-    text-decoration: none;
-    position: absolute;
-    left: 10px; }
-  .nav h1 {
-    margin: 0;
-    font-size: 20px;
-    font-weight: normal;
+  .nav ul li {
     text-align: center;
-    color: #FF8040; }
-  .nav ul {
-    margin: 0;
-    padding: 0 0 0 40px; }
-    .nav ul li {
-      text-align: center;
-      display: inline-block;
-      width: 30%;
-      border: 1px solid #fff;
-      margin-left: -4px;
-      font-size: 16px;
-      height: 1.5em;
-      line-height: 1.5em; }
-      .nav ul li a {
-        text-decoration: none;
-        color: #fff;
-        width: 100%; }
+    display: inline-block;
+    width: 25%;
+    font-size: 16px;
+    background-color: #FF8040;
+    float: left; }
+    .nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      width: 100%; }
+    .nav ul li.cur {
+      background: red; }
 
 /** 创团 */
 .s-create label {
@@ -129,7 +131,14 @@ label {
       text-align: center;
       height: 20px;
       line-height: 20px;
+      -webkit-transform: rotate(-22deg);
       transform: rotate(-22deg);
       font-size: 14px; }
+
+.s-index .qrcode img {
+  width: 200px; }
+
+.loading {
+  line-height: 300px; }
 
 /*# sourceMappingURL=base.css.map */
