--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -1,10 +1,13 @@
+$bgc : #636465;
+$btnBgc : #FF8040;
 
 
 body {
-    background-color: #636465;
+    background-color: $bgc;
     margin:0;
-    p{
+    p,ul,li{
       margin: 0;
+      padding: 0;
     }
 }
 
@@ -47,18 +50,12 @@ label{
       height: 40px;
       line-height: 40px;
       margin: 0 auto;
-      background-color: #FF8040;
+      background-color: $btnBgc;
       border-radius: 4px;
       color: #fff;
       text-decoration: none;
 }
 .nav{
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    background-color: #636465;
-    position: relative;
-    text-align: center;
     .return{
         display: inline-block;
         font-size: 30px;
@@ -69,27 +66,36 @@ label{
     }
     h1{
       margin: 0;
+      background: $btnBgc;
+      height: 40px;
+      line-height: 40px;
       font-size: 20px;
       font-weight: normal;
       text-align: center;
-      color: #FF8040;
+      color: #fff;
     }
     ul{
-        margin: 0;
-        padding: 0 0 0 40px;
+      width: 100%;
+      height: 40px;
+      line-height: 40px;
+      background-color: #636465;
+      position: fixed;
+      bottom:0;
+      text-align: center;
         li{
             text-align: center;
             display: inline-block;
-            width:30%;
-            border:1px solid #fff;
-            margin-left: -4px;
+            width:25%;
             font-size: 16px;
-            height: 1.5em;
-            line-height: 1.5em;
+            background-color: $btnBgc;
+            float:left;
             a{
                 text-decoration: none;
                 color: #fff;
                 width:100%;
+            }
+            &.cur{
+              background: red;
             }
         }
     }
@@ -155,8 +161,21 @@ label{
           text-align: center;
           height: 20px;
           line-height: 20px;
+          -webkit-transform: rotate(-22deg);
           transform: rotate(-22deg);
           font-size: 14px;
         }
     }
+}
+
+.s-index{
+  .qrcode{
+    img{
+      width: 200px;
+    }
+  }
+}
+
+.loading{
+  line-height: 300px;
 }
