--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,8 +1,11 @@
 body {
   margin: 0; }
-  body p, body ul, body li {
+  body p, body ul, body li, body h1, body h2, body h3, body h4, body h5 {
     margin: 0;
     padding: 0; }
+  body h1, body h2, body h3, body h4, body h5 {
+    font-size: 1em;
+    font-weight: normal; }
 
 /** components */
 .btn {
@@ -171,7 +174,7 @@ label {
       width: 200px; }
 
 .s-history .history li {
-  font-size: 16px;
+  font-size: 15px;
   height: 30px;
   line-height: 30px;
   border-bottom: 1px solid #dddddd;
@@ -179,5 +182,31 @@ label {
   .s-history .history li .time {
     color: #d8d8d8;
     margin-right: 10px; }
+
+.s-bill {
+  padding: 0 20px; }
+  .s-bill h1 {
+    text-align: center;
+    font-size: 30px;
+    margin: 30px 0; }
+  .s-bill h2 {
+    line-height: 20px;
+    margin: 1em 0; }
+  .s-bill input {
+    height: 20px;
+    line-height: 20px;
+    border: 1px solid #bgc1; }
+  .s-bill label {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    background-color: #e0dee1;
+    line-height: 80px;
+    text-align: center; }
+    .s-bill label.choosen {
+      background-color: #609700; }
+    .s-bill label input {
+      display: none; }
 
 /*# sourceMappingURL=base.css.map */
