--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -114,7 +114,7 @@ $width:270px;
 .s-history{
     .history{
         li{
-            font-size: 16px;
+            font-size: 15px;
             height: 30px;
             line-height: 30px;
             border-bottom:1px solid $textAreaBg;
@@ -123,6 +123,38 @@ $width:270px;
                 color:$hTextC;
                 margin-right: 10px;
             }
+        }
+    }
+}
+.s-bill{
+    padding: 0 20px;
+    h1{
+        text-align: center;
+        font-size: 30px;
+        margin: 30px 0;
+    }
+    h2{
+        line-height: 20px;
+        margin: 1em 0;
+    }
+    input{
+        height: 20px;
+        line-height: 20px;
+        border:1px solid #bgc1;
+    }
+    label{
+        display: inline-block;
+        width:80px;
+        height: 80px;
+        border-radius: 40px;
+        background-color: $bgc1;
+        line-height: 80px;
+        text-align: center;
+        &.choosen{
+            background-color: $btnActiveBgc;
+        }
+        input{
+            display: none;
         }
     }
 }
