--- a/public/scss/reset.scss
+++ b/public/scss/reset.scss
@@ -1,7 +1,11 @@
 body {
     margin:0;
-    p,ul,li{
+    p,ul,li,h1,h2,h3,h4,h5{
       margin: 0;
       padding: 0;
+    }
+    h1,h2,h3,h4,h5{
+        font-size: 1em;
+        font-weight: normal;
     }
 }
