--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,6 +1,6 @@
 body {
   margin: 0; }
-  body p, body ul, body li, body h1, body h2, body h3, body h4, body h5 {
+  body p, body ul, body li, body h1, body h2, body h3, body h4, body h5, body input, body textarea {
     margin: 0;
     padding: 0; }
   body h1, body h2, body h3, body h4, body h5 {
@@ -26,36 +26,22 @@ body {
   text-align: center;
   height: 80px;
   line-height: 80px;
-  margin: 0 auto;
+  margin: 10px;
   background-color: #999999;
   border-radius: 40px;
   color: #fff;
   text-decoration: none; }
 
-.nav .return {
-  display: inline-block;
-  font-size: 30px;
-  color: #fff;
-  text-decoration: none;
-  position: absolute;
-  left: 10px; }
-.nav h1 {
-  margin: 0;
-  background: #999999;
-  height: 40px;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: normal;
-  text-align: center;
-  color: #fff; }
 .nav ul {
+  background: #fff;
   width: 100%;
   height: 40px;
   line-height: 40px;
   position: fixed;
   bottom: 0;
   text-align: center;
-  border-top: 1px solid #e0dee1; }
+  border-top: 1px solid #e0dee1;
+  z-index: 2; }
   .nav ul li {
     text-align: center;
     display: inline-block;
@@ -105,7 +91,8 @@ label {
       background-size: 100%;
       border-radius: 40px;
       position: relative;
-      overflow: hidden; }
+      overflow: hidden;
+      border: 1px solid #d8d8d8; }
       .s-members .members .member img {
         max-width: 100%; }
       .s-members .members .member p {
@@ -120,29 +107,6 @@ label {
         transform: rotate(-22deg);
         font-size: 14px; }
 
-.s-create {
-  text-align: center; }
-  .s-create label {
-    display: inline-block;
-    margin: 10px auto;
-    text-align: center;
-    width: 270px;
-    background: #dddddd;
-    border-radius: 10px;
-    line-height: 2;
-    font-size: 1em; }
-    .s-create label input {
-      border: none;
-      background: #dddddd; }
-    .s-create label textarea {
-      border: none;
-      background: #dddddd;
-      resize: none;
-      font-size: 1em;
-      line-height: 2;
-      width: 270px;
-      max-height: 200px; }
-
 .s-index {
   text-align: center; }
   .s-index label {
@@ -151,37 +115,42 @@ label {
     text-align: center;
     width: 270px;
     background: #dddddd;
-    border-radius: 10px;
-    line-height: 2;
-    font-size: 1em; }
+    line-height: 30px;
+    font-size: 15px;
+    border-radius: 4px; }
     .s-index label input {
       border: none;
+      line-height: 30px;
+      height: 30px;
+      font-size: 15px;
       background: #dddddd; }
     .s-index label textarea {
+      font-size: 15px;
       border: none;
       background: #dddddd;
       resize: none;
-      font-size: 1em;
       line-height: 2;
       width: 80%;
       max-height: 100px; }
   .s-index .qrcode {
-    width: 200px;
-    height: 200px;
+    width: 270px;
     display: inline-block;
     border: 2px solid #d7d7d7; }
     .s-index .qrcode img {
       width: 200px; }
 
 .s-history .history li {
-  font-size: 15px;
-  height: 30px;
-  line-height: 30px;
+  font-size: 14px;
+  padding: 10px 0 10px 100px;
   border-bottom: 1px solid #dddddd;
-  padding: 0 0 0 20px; }
+  position: relative;
+  line-height: 1.5; }
   .s-history .history li .time {
     color: #d8d8d8;
-    margin-right: 10px; }
+    margin-right: 10px;
+    position: absolute;
+    left: 20px;
+    top: 11px; }
 
 .s-bill {
   padding: 0 20px; }
@@ -198,15 +167,45 @@ label {
     border: 1px solid #bgc1; }
   .s-bill label {
     display: inline-block;
-    width: 80px;
-    height: 80px;
-    border-radius: 40px;
-    background-color: #e0dee1;
-    line-height: 80px;
-    text-align: center; }
-    .s-bill label.choosen {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-size: 100%;
+    line-height: 50px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    margin: 5px; }
+    .s-bill label.choosen p {
       background-color: #609700; }
     .s-bill label input {
       display: none; }
+    .s-bill label p {
+      position: absolute;
+      bottom: -1px;
+      left: 8px;
+      width: 100%;
+      text-align: center;
+      height: 20px;
+      line-height: 20px;
+      -webkit-transform: rotate(-22deg);
+      transform: rotate(-22deg);
+      font-size: 12px;
+      background-color: #d8d8d8; }
+
+.s-list .tuan {
+  display: inline-block;
+  height: 80px;
+  width: 80px;
+  border-radius: 40px;
+  line-height: 80px;
+  margin: 10px; }
+.s-list .index-nav {
+  position: fixed;
+  bottom: 0;
+  height: 40px;
+  line-height: 40px;
+  border-top: 1px solid #ddd;
+  width: 100%; }
 
 /*# sourceMappingURL=base.css.map */
