--- a/public/css/components.css
+++ b/public/css/components.css
@@ -17,36 +17,22 @@
   text-align: center;
   height: 80px;
   line-height: 80px;
-  margin: 0 auto;
+  margin: 10px;
   background-color: #999999;
   border-radius: 40px;
   color: #fff;
   text-decoration: none; }
 
-.nav .return {
-  display: inline-block;
-  font-size: 30px;
-  color: #fff;
-  text-decoration: none;
-  position: absolute;
-  left: 10px; }
-.nav h1 {
-  margin: 0;
-  background: #999999;
-  height: 40px;
-  line-height: 40px;
-  font-size: 20px;
-  font-weight: normal;
-  text-align: center;
-  color: #fff; }
 .nav ul {
+  background: #fff;
   width: 100%;
   height: 40px;
   line-height: 40px;
   position: fixed;
   bottom: 0;
   text-align: center;
-  border-top: 1px solid #e0dee1; }
+  border-top: 1px solid #e0dee1;
+  z-index: 2; }
   .nav ul li {
     text-align: center;
     display: inline-block;
