--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,6 +1,6 @@
 body {
   margin: 0; }
-  body p, body ul, body li, body h1, body h2, body h3, body h4, body h5 {
+  body p, body ul, body li, body h1, body h2, body h3, body h4, body h5, body input, body textarea {
     margin: 0;
     padding: 0; }
   body h1, body h2, body h3, body h4, body h5 {
