--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -23,6 +23,7 @@
             border-radius: 40px;
             position: relative;
             overflow: hidden;
+            border: 1px solid $hTextC;
             img{
               max-width: 100%;
             }
@@ -45,56 +46,30 @@
 
 $width:270px;
 
-.s-create{
-    text-align: center;
-
-    label {
-        display: inline-block;
-        margin: 10px auto;
-        text-align:center;
-        width:$width;
-        background:$textAreaBg;
-        border-radius: 10px;
-        line-height: 2;
-        font-size: 1em;
-        input{
-            border:none;
-            background: $textAreaBg;
-        }
-        textarea{
-            border:none;
-            background: $textAreaBg;
-            resize: none;
-            font-size: 1em;
-            line-height: 2;
-            width:$width;
-            max-height: 200px;
-        }
-    }
-
-}
-
 .s-index{
     text-align: center;
-
     label {
         display: inline-block;
         margin: 10px auto;
         text-align:center;
         width:$width;
         background:$textAreaBg;
-        border-radius: 10px;
-        line-height: 2;
-        font-size: 1em;
+        line-height: 30px;
+        font-size: 15px;
+        border-radius: 4px;
+
         input{
             border:none;
+            line-height: 30px;
+            height: 30px;
+            font-size: 15px;
             background: $textAreaBg;
         }
         textarea{
+            font-size: 15px;
             border:none;
             background: $textAreaBg;
             resize: none;
-            font-size: 1em;
             line-height: 2;
             width:80%;
             max-height: 100px;
@@ -102,8 +77,7 @@ $width:270px;
     }
 
     .qrcode{
-        width:200px;
-        height:200px;
+        width:$width;
         display: inline-block;
         border:2px solid #d7d7d7;
         img{
@@ -114,14 +88,17 @@ $width:270px;
 .s-history{
     .history{
         li{
-            font-size: 15px;
-            height: 30px;
-            line-height: 30px;
+            font-size: 14px;
+            padding: 10px 0 10px 100px;
             border-bottom:1px solid $textAreaBg;
-            padding: 0 0 0 20px;
+            position: relative;
+            line-height: 1.5;
             .time{
                 color:$hTextC;
                 margin-right: 10px;
+                position: absolute;
+                left:20px;
+                top:11px;
             }
         }
     }
@@ -144,17 +121,55 @@ $width:270px;
     }
     label{
         display: inline-block;
-        width:80px;
-        height: 80px;
-        border-radius: 40px;
-        background-color: $bgc1;
-        line-height: 80px;
+        width:50px;
+        height: 50px;
+        border-radius: 25px;
+        background-size: 100%;
+        line-height: 50px;
         text-align: center;
+        position: relative;
+        overflow:hidden;
+        margin: 5px;
+
+
         &.choosen{
-            background-color: $btnActiveBgc;
+            p{
+                background-color: $btnActiveBgc;
+            }
         }
         input{
             display: none;
         }
+        p{
+            position: absolute;
+            bottom: -1px;
+            left: 8px;
+            width: 100%;
+            text-align: center;
+            height: 20px;
+            line-height: 20px;
+            -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+            font-size: 12px;
+            background-color: $hTextC;
+        }
+    }
+}
+.s-list{
+    .tuan{
+        display: inline-block;
+        height: 80px;
+        width: 80px;
+        border-radius: 40px;
+        line-height: 80px;
+        margin: 10px;
+    }
+    .index-nav{
+         position: fixed;
+        bottom: 0;
+        height: 40px;
+        line-height: 40px;
+        border-top: 1px solid #ddd;
+        width: 100%;
     }
 }
