--- a/public/scss/components.scss
+++ b/public/scss/components.scss
@@ -18,7 +18,7 @@
   text-align: center;
   height: 80px;
   line-height: 80px;
-  margin: 0 auto;
+  margin: 10px;
   background-color: #999999;
   border-radius: 40px;
   color: #fff;
@@ -26,25 +26,8 @@
 }
 
 .nav{
-    .return{
-        display: inline-block;
-        font-size: 30px;
-        color: #fff;
-        text-decoration: none;
-        position: absolute;
-        left:10px;
-    }
-    h1{
-      margin: 0;
-      background: $btnBgc;
-      height: 40px;
-      line-height: 40px;
-      font-size: 20px;
-      font-weight: normal;
-      text-align: center;
-      color: #fff;
-    }
     ul{
+      background: $bgc;
       width: 100%;
       height: 40px;
       line-height: 40px;
@@ -52,6 +35,7 @@
       bottom:0;
       text-align: center;
       border-top:1px solid $bgc1;
+      z-index: 2;
         li{
             text-align: center;
             display: inline-block;
