--- a/public/scss/reset.scss
+++ b/public/scss/reset.scss
@@ -1,6 +1,6 @@
 body {
     margin:0;
-    p,ul,li,h1,h2,h3,h4,h5{
+    p,ul,li,h1,h2,h3,h4,h5,input,textarea{
       margin: 0;
       padding: 0;
     }
