--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -100,6 +100,11 @@ $width:270px;
                 left:20px;
                 top:11px;
             }
+            .delete{
+                position: absolute;
+                right: 0;
+                color: red;
+            }
         }
     }
 }
