--- a/cloud/views/myet.html
+++ b/cloud/views/myet.html
@@ -9,6 +9,7 @@
   <script src="https://leancloud.cn/scripts/lib/av-0.4.7.min.js"></script>
   <script charset="utf-8" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <script src="./lib/angular.min.js"></script>
+  <script src="./lib/angular-touch.js"></script>
   <script src="./lib/angular-route.min.js"></script>
   <script src="./js/eat.js"></script>
   <script src="./js/controllers.js"></script>
