--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -78,6 +78,12 @@ $width:270px;
             height: 30px;
             font-size: 15px;
             color: #000;
+            -webkit-appearance: none;
+        }
+        .money{
+            display: inline-block;
+            width: 170px;
+            text-align: left;
         }
         textarea{
             color: #000;
@@ -156,6 +162,7 @@ $width:270px;
         line-height: 20px;
         border:1px solid $bgc1;
         -webkit-appearance: none;
+        padding: 0 10px;
     }
     label{
         display: inline-block;
@@ -168,11 +175,11 @@ $width:270px;
         position: relative;
         overflow:hidden;
         margin: 5px;
-
+        border:1px solid $bgc1;
 
         &.choosen{
             p{
-                background-color: $btnActiveBgc;
+                background-color: #ACC088;
             }
         }
         input{
@@ -238,21 +245,13 @@ $width:270px;
         .menu{
             display: inline-block;
             width: 40px;
-            border-right:1px solid $hTextC;
+            // border-right:1px solid $hTextC;
         }
         .self{
             display: inline-block;
             width:200px;
-            border-right:1px solid $hTextC;
+            // border-right:1px solid $hTextC;
             text-align: center;
-        }
-        .create{
-            display: inline-block;
-            width: 75px;
-            text-align: center;
-            position: absolute;
-            right:0;
-            bottom:0;
         }
     }
 }
