--- a/public/scss/components.scss
+++ b/public/scss/components.scss
@@ -20,12 +20,17 @@
   border: 1px solid $bgc1;
   position: fixed;
   bottom: 50px;
-  right: 10px;
   color: #888;
   background: $bgc;
   height: 60px;
   width: 60px;
   line-height: 60px;
+}
+.circle-btn-right{
+  right: 10px;
+}
+.circle-btn-left{
+  left: 10px;
 }
 
 .nav{
