--- a/public/css/base.css
+++ b/public/css/base.css
@@ -179,13 +179,13 @@ body {
   .s-bill h2 {
     line-height: 20px;
     margin: 1em 0; }
-  .s-bill input {
+  .s-bill .members input {
     height: 20px;
     line-height: 20px;
     border: 1px solid #e0dee1;
     -webkit-appearance: none;
     padding: 0 10px; }
-  .s-bill label {
+  .s-bill .members label {
     display: inline-block;
     width: 50px;
     height: 50px;
@@ -197,11 +197,11 @@ body {
     overflow: hidden;
     margin: 5px;
     border: 1px solid #e0dee1; }
-    .s-bill label.choosen p {
+    .s-bill .members label.choosen p {
       background-color: #ACC088; }
-    .s-bill label input {
+    .s-bill .members label input {
       display: none; }
-    .s-bill label p {
+    .s-bill .members label p {
       position: absolute;
       bottom: -1px;
       left: 8px;
