--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -147,46 +147,49 @@ $width:270px;
         line-height: 20px;
         margin: 1em 0;
     }
-    input{
-        height: 20px;
-        line-height: 20px;
-        border:1px solid $bgc1;
-        -webkit-appearance: none;
-        padding: 0 10px;
-    }
-    label{
-        display: inline-block;
-        width:50px;
-        height: 50px;
-        border-radius: 25px;
-        background-size: 100%;
-        line-height: 50px;
-        text-align: center;
-        position: relative;
-        overflow:hidden;
-        margin: 5px;
-        border:1px solid $bgc1;
-
-        &.choosen{
-            p{
-                background-color: #ACC088;
-            }
-        }
+    .members{
         input{
-            display: none;
-        }
-        p{
-            position: absolute;
-            bottom: -1px;
-            left: 8px;
-            width: 100%;
-            text-align: center;
             height: 20px;
             line-height: 20px;
-            -webkit-transform: rotate(-22deg);
-            transform: rotate(-22deg);
-            font-size: 12px;
-            background-color: $hTextC;
+            border:1px solid $bgc1;
+            -webkit-appearance: none;
+            padding: 0 10px;
+        }
+
+        label{
+            display: inline-block;
+            width:50px;
+            height: 50px;
+            border-radius: 25px;
+            background-size: 100%;
+            line-height: 50px;
+            text-align: center;
+            position: relative;
+            overflow:hidden;
+            margin: 5px;
+            border:1px solid $bgc1;
+
+            &.choosen{
+                p{
+                    background-color: #ACC088;
+                }
+            }
+            input{
+                display: none;
+            }
+            p{
+                position: absolute;
+                bottom: -1px;
+                left: 8px;
+                width: 100%;
+                text-align: center;
+                height: 20px;
+                line-height: 20px;
+                -webkit-transform: rotate(-22deg);
+                transform: rotate(-22deg);
+                font-size: 12px;
+                background-color: $hTextC;
+            }
         }
     }
 }
