--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -249,4 +249,79 @@ $width:270px;
     }
 }
 
+.s-history-detail{
+
+    padding: 0 20px;
+    h1{
+        text-align: center;
+        font-size: 30px;
+        margin: 30px 0;
+    }
+    h2{
+        line-height: 20px;
+        margin: 1em 0;
+    }
+    .process-bar{
+        width: 100%;
+        height: 30px;
+        background: wheat;
+        display: block;
+        border-radius: 20px;
+        .inner{
+            width: 100%;
+            height: 30px;
+            background: green;
+            display: block;
+            border-radius: 20px;
+            text-align: center;
+            line-height: 30px;
+        }
+    }
+    .members{
+        input{
+            height: 20px;
+            line-height: 20px;
+            border:1px solid $bgc1;
+            -webkit-appearance: none;
+            padding: 0 10px;
+        }
+
+        label{
+            display: inline-block;
+            width:50px;
+            height: 50px;
+            border-radius: 25px;
+            background-size: 100%;
+            line-height: 50px;
+            text-align: center;
+            position: relative;
+            overflow:hidden;
+            margin: 5px;
+            border:1px solid $bgc1;
+
+            &.choosen{
+                p{
+                    background-color: #ACC088;
+                }
+            }
+            input{
+                display: none;
+            }
+            p{
+                position: absolute;
+                bottom: -1px;
+                left: 8px;
+                width: 100%;
+                text-align: center;
+                height: 20px;
+                line-height: 20px;
+                -webkit-transform: rotate(-22deg);
+                transform: rotate(-22deg);
+                font-size: 12px;
+                background-color: $hTextC;
+            }
+        }
+    }
+}
+
 @import "animations.scss";
