--- a/public/css/base.css
+++ b/public/css/base.css
@@ -277,10 +277,16 @@ body {
       width: 100%;
       height: 30px;
       background: green;
-      display: block;
+      display: inline-block;
       border-radius: 20px;
       text-align: center;
       line-height: 30px; }
+    .s-history-detail .process-bar .total {
+      display: inline-block;
+      height: 30px;
+      vertical-align: top;
+      line-height: 30px;
+      text-align: center; }
   .s-history-detail .members input {
     height: 20px;
     line-height: 20px;
