--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -271,10 +271,17 @@ $width:270px;
             width: 100%;
             height: 30px;
             background: green;
-            display: block;
+            display: inline-block;
             border-radius: 20px;
             text-align: center;
             line-height: 30px;
+        }
+        .total{
+            display: inline-block;
+            height: 30px;
+            vertical-align: top;
+            line-height: 30px;
+            text-align: center;
         }
     }
     .members{
