--- a/public/css/base.css
+++ b/public/css/base.css
@@ -258,69 +258,61 @@ body {
     width: 200px;
     text-align: center; }
 
-.s-history-detail {
+.s-history-detail .history-view {
   padding: 0 20px; }
-  .s-history-detail h1 {
-    text-align: center;
-    font-size: 30px;
-    margin: 30px 0; }
-  .s-history-detail h2 {
-    line-height: 20px;
-    margin: 1em 0; }
-  .s-history-detail .process-bar {
+.s-history-detail h1 {
+  text-align: center;
+  font-size: 30px;
+  margin: 30px 0; }
+.s-history-detail h2 {
+  line-height: 20px;
+  margin: 1em 0; }
+.s-history-detail .process-bar {
+  width: 100%;
+  height: 30px;
+  background: wheat;
+  display: block;
+  border-radius: 20px; }
+  .s-history-detail .process-bar .inner {
     width: 100%;
     height: 30px;
-    background: wheat;
-    display: block;
-    border-radius: 20px; }
-    .s-history-detail .process-bar .inner {
-      width: 100%;
-      height: 30px;
-      background: green;
-      display: inline-block;
-      border-radius: 20px;
-      text-align: center;
-      line-height: 30px; }
-    .s-history-detail .process-bar .total {
-      display: inline-block;
-      height: 30px;
-      vertical-align: top;
-      line-height: 30px;
-      text-align: center; }
-  .s-history-detail .members input {
+    background: green;
+    display: inline-block;
+    border-radius: 20px;
+    text-align: center;
+    line-height: 30px; }
+  .s-history-detail .process-bar .total {
+    display: inline-block;
+    height: 30px;
+    vertical-align: top;
+    line-height: 30px;
+    text-align: center; }
+.s-history-detail .members label {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-size: 100%;
+  line-height: 50px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  margin: 5px;
+  border: 1px solid #e0dee1; }
+  .s-history-detail .members label.paid p {
+    background-color: #ACC088; }
+  .s-history-detail .members label p {
+    position: absolute;
+    bottom: -1px;
+    left: 8px;
+    width: 100%;
+    text-align: center;
     height: 20px;
     line-height: 20px;
-    border: 1px solid #e0dee1;
-    -webkit-appearance: none;
-    padding: 0 10px; }
-  .s-history-detail .members label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    background-size: 100%;
-    line-height: 50px;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-    margin: 5px;
-    border: 1px solid #e0dee1; }
-    .s-history-detail .members label.choosen p {
-      background-color: #ACC088; }
-    .s-history-detail .members label input {
-      display: none; }
-    .s-history-detail .members label p {
-      position: absolute;
-      bottom: -1px;
-      left: 8px;
-      width: 100%;
-      text-align: center;
-      height: 20px;
-      line-height: 20px;
-      -webkit-transform: rotate(-22deg);
-      transform: rotate(-22deg);
-      font-size: 12px;
-      background-color: #d8d8d8; }
+    -webkit-transform: rotate(-22deg);
+    transform: rotate(-22deg);
+    font-size: 12px;
+    background-color: #d8d8d8; }
 
 .animated {
   -webkit-animation-duration: 10s;
