--- a/public/css/base.css
+++ b/public/css/base.css
@@ -293,6 +293,8 @@ body {
 .s-history-detail h2 {
   line-height: 20px;
   margin: 1em 0; }
+  .s-history-detail h2.date {
+    text-align: right; }
 .s-history-detail .process-bar {
   width: 100%;
   height: 30px;
